--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,10 @@ matplotlib>=3.4.0
 seaborn>=0.11.0
 pydeck>=0.8.0
 altair>=4.2.0
+geopandas>=0.10.0
+shapely>=2.0.0
+pyproj>=3.0.0
+plotly-express>=0.4.1
+xarray>=2022.6.0
+rioxarray>=0.12.0
+statsmodels>=0.13.0
